# personal-llm-computing

./: CLAUDE.md  package.json  pnpm-lock.yaml
apps/bot/: .gitignore  README.md  ai.py  bot.py  claude_code_test.py  config.py  executor.py  handlers.py  hello.py  observability.py  persistence.py  pyproject.toml
apps/web/: README.md  eslint.config.js  package.json
apps/web/app/: actions.ts  page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/sessions/: page.tsx
apps/web/components/: create-project-dialog.tsx  create-session-dialog.tsx  delete-project-dialog.tsx  delete-session-dialog.tsx  edit-project-dialog.tsx  edit-session-dialog.tsx  projects-table.tsx  sessions-table.tsx  view-messages-dialog.tsx
apps/web/lib/: db.ts
