[project]
name = "llm-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.18",
    "openai>=2.14.0",
    "python-telegram-bot[all]>=22.5",
    "rich>=14.2.0",
    "telegram>=0.0.1",
]

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
]
